@@ -1,5 +1,17 @@
 "ChangeLog"
 
+2005-06-02	David Fang		<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-42-CHP-01-09-dataexpr-01:
+	  This branch is for developing expression framework for datatypes, 
+		very similar to those of meta-parameter expressions.  
+	  In this revision, we've FINALLY liberated the param_expr
+		(and friends) class hierarchy from the 'object' parent class, 
+		which we could've done after we did away with the 
+		object-expression stack in parser::context.  
+		One less virtual pointer per expr-object!
+
+
 2005-05-30	David Fang		<fangism@users.sourceforge.net>
 
 	* ARTXX-00-01-04-main-00-42-CHP-01-09:
